<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface_primary">

    <com.amap.api.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/map_scrim" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:orientation="vertical"
        android:paddingStart="@dimen/space_lg"
        android:paddingTop="@dimen/space_lg"
        android:paddingEnd="@dimen/space_lg">

        <LinearLayout
            android:layout_width="@dimen/hud_strip_width"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/networkStatusText"
                style="@style/TextAppearance.DeviceTracker.StatusCompact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xs"
                android:maxLines="1"
                android:text="@string/live_location_network" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/homeHudStrip"
            android:layout_width="@dimen/hud_strip_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/deviceCountCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_panel_survey_primary"
                android:minHeight="@dimen/hud_primary_card_min_height"
                android:orientation="vertical"
                android:paddingStart="@dimen/space_md"
                android:paddingTop="@dimen/space_sm"
                android:paddingEnd="@dimen/space_md"
                android:paddingBottom="@dimen/space_sm">

                <LinearLayout
                    android:id="@+id/fleetOverviewCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fleetLabelText"
                        style="@style/TextAppearance.DeviceTracker.Overline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/fleet_online" />

                    <TextView
                        android:id="@+id/deviceCountText"
                        style="@style/TextAppearance.DeviceTracker.MetricCompact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_xs"
                        android:autoSizeMaxTextSize="@dimen/text_metric_compact_size"
                        android:autoSizeMinTextSize="16sp"
                        android:autoSizeStepGranularity="1sp"
                        android:autoSizeTextType="uniform"
                        android:maxLines="1"
                        android:text="0" />

                    <TextView
                        android:id="@+id/fleetStatusText"
                        style="@style/TextAppearance.DeviceTracker.StatusCompact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_xs"
                        android:maxLines="2"
                        android:text="@string/sync_status_ready"
                        android:textAlignment="viewStart" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mainStatePanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:maxWidth="320dp"
            android:background="@drawable/bg_state_panel_survey"
            android:orientation="vertical"
            android:padding="@dimen/space_md"
            android:visibility="gone">

            <TextView
                android:id="@+id/mainStateTitleText"
                style="@style/TextAppearance.DeviceTracker.EmphasisCompact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2" />

            <TextView
                android:id="@+id/mainStateBodyText"
                style="@style/TextAppearance.DeviceTracker.StatusCompact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:textColor="@color/text_secondary" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/myLocationFab"
        android:layout_width="@dimen/fab_shell_size"
        android:layout_height="@dimen/fab_shell_size"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/space_lg"
        android:layout_marginBottom="@dimen/space_lg"
        android:background="@drawable/bg_button_tool"
        android:contentDescription="@string/my_location"
        android:padding="@dimen/space_sm"
        android:src="@drawable/ic_fleet_locate"
        app:tint="@color/text_primary" />

</FrameLayout>
